fix(theme): decreased secondary color contrast

--- a/src/theme/vars.css
+++ b/src/theme/vars.css
@@ -12,7 +12,7 @@
   --on-primary: oklch(100% 0 0);
   --primary-foreground: oklch(41% 0.15 280);
 
-  --secondary: oklch(19% 0 0);
+  --secondary: oklch(30% 0 0);
   --on-secondary: oklch(96% 0 0);
   --secondary-foreground: oklch(19% 0 0);
 
@@ -51,9 +51,9 @@
   --on-primary: oklch(100% 0 0);
   --primary-foreground: oklch(62% 0.15 280);
 
-  --secondary: oklch(95% 0 0);
+  --secondary: oklch(92% 0 0);
   --on-secondary: oklch(14% 0 0);
-  --secondary-foreground: oklch(100% 0 0);
+  --secondary-foreground: oklch(92% 0 0);
 
   --muted: oklch(39% 0 0);
   --on-muted: oklch(87% 0 0);
